Fix loading bar z-index

--- a/media/css/styles.css
+++ b/media/css/styles.css
@@ -715,7 +715,7 @@ to {transform:rotate(360deg);}
     margin: 10px 0 10px -250px;
     position: absolute;
     width: 500px;
-    z-index: 10;
+    z-index: 1001;
     display : none;
 }
 #jce .progress .bar {
